ci: simplify Docker-based build and add workflows
Resolves: #4

fix deploy